--- a/ecoomerc/package.json
+++ b/ecoomerc/package.json
@@ -12,11 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "axios": "^1.13.2",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.11",
+    "@vue/cli-service": "^5.0.9",
+    "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
 }
