--- a/ecoomerc/package.json
+++ b/ecoomerc/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "^20.19.0 || >=22.12.0"
+    "node": "20.x"
   },
   "scripts": {
     "dev": "vite",
@@ -18,7 +18,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/cli-service": "^5.0.9",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
